# Atelier_CMAKE

./: CMakeLists.txt
.github/workflows/: test.yml  tests.yml
include/: calculator.h
src/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt  calculator.c
src/tests/: test_calculator.c
